--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,9 +19,14 @@
     <%= link_to "Songs", songs_path %>
     <%= link_to "Artists", artists_path %>
     <%= link_to "Users", users_path %>
-  </nav>
-  
-<%= yield %>
 
+      <% flash.each do |type, message| %>
+      <span class="<%= type %>"> <%= message %> </span>
+      <%end%>
+  
+  </nav>
+
+
+<%= yield %>
 </body>
 </html>
